added background and opacity files

--- a/5.background/2.image.html
+++ b/5.background/2.image.html
@@ -4,8 +4,9 @@
         <style>
             body {
                 background-image: url("/images/Bird.jpg");
-                background-repeat: repeat-y;
-                height: 1500px;
+                background-repeat: no-repeat;
+                height: 200px;
+                background-position: 200px ;
             }
 
             /* .div-image{
